# huddle

./: .env.example  .gitignore  .npmrc  BUILDING.md  MAC_INSTALL_NOTE.md  README.md  package.json  pnpm-lock.yaml  turbo.json  vercel.json
.github/: SECRETS.md
.github/workflows/: desktop-release.yml
apps/desktop/: package.json
apps/desktop/src-tauri/: Cargo.toml  entitlements.plist  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/mobile/: .env.example  app.json  babel.config.js  global.css  metro.config.js  package.json  tailwind.config.js  tsconfig.json  vercel.json
apps/mobile/app/: +html.tsx  _layout.tsx
apps/mobile/components/: AvatarCluster.tsx  ConfettiLock.tsx  ConfettiLock.web.tsx  PlanCard.tsx  ReliabilityBadge.tsx  SuggestionCard.tsx  ThemePicker.tsx  TimeGrid.tsx  TripItineraryItem.tsx  VibePicker.tsx
apps/mobile/contexts/: AuthContext.tsx
apps/mobile/hooks/: useAuth.ts  useBreakpoint.ts  useContacts.ts  usePlan.ts  usePlans.ts  usePro.ts
apps/mobile/lib/: notifications.ts  notifications.web.ts  posthog.ts  revenuecat.ts  revenuecat.web.ts  supabase.ts
apps/web/: .env.example  next.config.ts  package.json  tsconfig.json  vercel.json
apps/web/app/: globals.css  layout.tsx  opengraph-image.tsx  page.tsx
scripts/: inline-dark-bg.js
supabase/: config.toml  seed.sql
supabase/migrations/: 001_initial_schema.sql  002_rls_policies.sql  003_fixes.sql  004_cron.sql  005_share_links.sql  006_realtime_plan_invitees.sql
(+62 files in other folders)
